pose detection on live video feed

--- a/posedetection.ipynb
+++ b/posedetection.ipynb
@@ -29,6 +29,92 @@
     "# Initializing mediapipe drawing class, useful for annotation.\n",
     "mp_drawing = mp.solutions.drawing_utils "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup Pose function for video.\n",
+    "pose_video = mp_pose.Pose(static_image_mode=False, min_detection_confidence=0.5, model_complexity=1)\n",
+    "\n",
+    "# Initialize the VideoCapture object to read from the webcam.\n",
+    "video = cv2.VideoCapture(1)\n",
+    "\n",
+    "# Create named window for resizing purposes\n",
+    "cv2.namedWindow('Pose Detection', cv2.WINDOW_NORMAL)\n",
+    "\n",
+    "\n",
+    "# Initialize the VideoCapture object to read from a video stored in the disk.\n",
+    "#video = cv2.VideoCapture('media/running.mp4')\n",
+    "\n",
+    "# Set video camera size\n",
+    "video.set(3,1280)\n",
+    "video.set(4,960)\n",
+    "\n",
+    "# Initialize a variable to store the time of the previous frame.\n",
+    "time1 = 0\n",
+    "\n",
+    "# Iterate until the video is accessed successfully.\n",
+    "while video.isOpened():\n",
+    "    \n",
+    "    # Read a frame.\n",
+    "    ok, frame = video.read()\n",
+    "    \n",
+    "    # Check if frame is not read properly.\n",
+    "    if not ok:\n",
+    "        \n",
+    "        # Break the loop.\n",
+    "        break\n",
+    "    \n",
+    "    # Flip the frame horizontally for natural (selfie-view) visualization.\n",
+    "    frame = cv2.flip(frame, 1)\n",
+    "    \n",
+    "    # Get the width and height of the frame\n",
+    "    frame_height, frame_width, _ =  frame.shape\n",
+    "    \n",
+    "    # Resize the frame while keeping the aspect ratio.\n",
+    "    frame = cv2.resize(frame, (int(frame_width * (640 / frame_height)), 640))\n",
+    "    \n",
+    "    # Perform Pose landmark detection.\n",
+    "    frame, _ = detectPose(frame, pose_video, display=False)\n",
+    "    \n",
+    "    # Set the time for this frame to the current time.\n",
+    "    time2 = time()\n",
+    "    \n",
+    "    # Check if the difference between the previous and this frame time > 0 to avoid division by zero.\n",
+    "    if (time2 - time1) > 0:\n",
+    "    \n",
+    "        # Calculate the number of frames per second.\n",
+    "        frames_per_second = 1.0 / (time2 - time1)\n",
+    "        \n",
+    "        # Write the calculated number of frames per second on the frame. \n",
+    "        cv2.putText(frame, 'FPS: {}'.format(int(frames_per_second)), (10, 30),cv2.FONT_HERSHEY_PLAIN, 2, (0, 255, 0), 3)\n",
+    "    \n",
+    "    # Update the previous frame time to this frame time.\n",
+    "    # As this frame will become previous frame in next iteration.\n",
+    "    time1 = time2\n",
+    "    \n",
+    "    # Display the frame.\n",
+    "    cv2.imshow('Pose Detection', frame)\n",
+    "    \n",
+    "    # Wait until a key is pressed.\n",
+    "    # Retreive the ASCII code of the key pressed\n",
+    "    k = cv2.waitKey(1) & 0xFF\n",
+    "    \n",
+    "    # Check if 'ESC' is pressed.\n",
+    "    if(k == 27):\n",
+    "        \n",
+    "        # Break the loop.\n",
+    "        break\n",
+    "\n",
+    "# Release the VideoCapture object.\n",
+    "video.release()\n",
+    "\n",
+    "# Close the windows.\n",
+    "cv2.destroyAllWindows()"
+   ]
   }
  ],
  "metadata": {
