added detectPose function

--- a/posedetection.ipynb
+++ b/posedetection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +28,72 @@
     "\n",
     "# Initializing mediapipe drawing class, useful for annotation.\n",
     "mp_drawing = mp.solutions.drawing_utils "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def detectPose(image, pose, display=True):\n",
+    "    '''\n",
+    "    This function performs pose detection on an image.\n",
+    "    Args:\n",
+    "        image: The input image with a prominent person whose pose landmarks needs to be detected.\n",
+    "        pose: The pose setup function required to perform the pose detection.\n",
+    "        display: A boolean value that is if set to true the function displays the original input image, the resultant image, \n",
+    "                 and the pose landmarks in 3D plot and returns nothing.\n",
+    "    Returns:\n",
+    "        output_image: The input image with the detected pose landmarks drawn.\n",
+    "        landmarks: A list of detected landmarks converted into their original scale.\n",
+    "    '''\n",
+    "    \n",
+    "    # Create a copy of the input image.\n",
+    "    output_image = image.copy()\n",
+    "    \n",
+    "    # Convert the image from BGR into RGB format.\n",
+    "    imageRGB = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "    \n",
+    "    # Perform the Pose Detection.\n",
+    "    results = pose.process(imageRGB)\n",
+    "    \n",
+    "    # Retrieve the height and width of the input image.\n",
+    "    height, width, _ = image.shape\n",
+    "    \n",
+    "    # Initialize a list to store the detected landmarks.\n",
+    "    landmarks = []\n",
+    "    \n",
+    "    # Check if any landmarks are detected.\n",
+    "    if results.pose_landmarks:\n",
+    "    \n",
+    "        # Draw Pose landmarks on the output image.\n",
+    "        mp_drawing.draw_landmarks(image=output_image, landmark_list=results.pose_landmarks,\n",
+    "                                  connections=mp_pose.POSE_CONNECTIONS)\n",
+    "        \n",
+    "        # Iterate over the detected landmarks.\n",
+    "        for landmark in results.pose_landmarks.landmark:\n",
+    "            \n",
+    "            # Append the landmark into the list.\n",
+    "            landmarks.append((int(landmark.x * width), int(landmark.y * height),\n",
+    "                                  (landmark.z * width)))\n",
+    "    \n",
+    "    # Check if the original input image and the resultant image are specified to be displayed.\n",
+    "    if display:\n",
+    "    \n",
+    "        # Display the original input image and the resultant image.\n",
+    "        plt.figure(figsize=[22,22])\n",
+    "        plt.subplot(121);plt.imshow(image[:,:,::-1]);plt.title(\"Original Image\");plt.axis('off');\n",
+    "        plt.subplot(122);plt.imshow(output_image[:,:,::-1]);plt.title(\"Output Image\");plt.axis('off');\n",
+    "        \n",
+    "        # Also Plot the Pose landmarks in 3D.\n",
+    "        mp_drawing.plot_landmarks(results.pose_world_landmarks, mp_pose.POSE_CONNECTIONS)\n",
+    "        \n",
+    "    # Otherwise\n",
+    "    else:\n",
+    "        \n",
+    "        # Return the output image and the found landmarks.\n",
+    "        return output_image, landmarks"
    ]
   },
   {
