Removed API key

--- a/apitest.ipynb
+++ b/apitest.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GOOGLE_API_KEY = \"AIzaSyATrAqafS-C4QrEKxwvtLpn7L8elw-ZYxs\""
+    "GOOGLE_API_KEY = \"///\""
    ]
   },
   {
@@ -108,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.undefined.undefined"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
