Added SendApiReq function that is called by IntervalScreenshots

--- a/ApiSender.ipynb
+++ b/ApiSender.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,20 +76,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image 0 output:\n",
+      " There is a wall with a lot of colored squares painted on it. There is a TV on the wall and two chairs in front of it.\n",
+      "Image 1 output:\n",
+      " There is a wall with a lot of colored squares painted on it. There is a TV on the wall and two chairs in front of it.\n",
+      "Image 2 output:\n",
+      " A wall with a lot of colored squares painted on it. There is a TV on the wall and two chairs in front of it.\n",
+      "Image 3 output:\n",
+      " There is a colorful pixelated wall with a TV mounted on it. There are two chairs in front of the wall and a couch to the left. The room has white walls and a white ceiling.\n",
+      "Image 4 output:\n",
+      " A wall with a lot of colored squares painted on it. There is a TV on the wall and two chairs in front of it.\n",
+      "Image 5 output:\n",
+      " There is a multicolored pixelated wall with a TV mounted on it. There are two blue chairs in front of the wall and a white couch behind the chairs. There is a green FPS counter in the upper left corner of the screen.\n",
+      "Image 6 output:\n",
+      " A wall with a lot of colored squares painted on it. There is a TV on the wall and two chairs in front of it.\n",
+      "Image 7 output:\n",
+      " There is a wall with a lot of colored squares painted on it. There is a TV on the wall and two chairs in front of it.\n",
+      "Image 8 output:\n",
+      " There is a wall with a bunch of different colored squares painted on it. There is a TV on the wall and two chairs in front of it.\n",
+      "Image 9 output:\n",
+      " The screen shows a blurred view of a window and a wall. The window is on the left side of the screen and takes up most of the space. It is covered with blinds that are slightly open. The wall is on the right side of the screen and is painted white. There is a baseboard heater under the window. The words \"FPS: 23\" are written in green text in the upper left corner of the screen.\n",
+      "Image 10 output:\n",
+      " There are two people sitting at a table. The person on the left is wearing a striped shirt and the person on the right is wearing a purple shirt. The person in the purple shirt is holding their chin and the person in the striped shirt is typing on a laptop. There are red dots and white lines drawn on the people which appear to be tracking their movements.\n"
+     ]
+    },
+    {
+     "ename": "UnidentifiedImageError",
+     "evalue": "cannot identify image file 'screenshots/screenshot_11.png'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnidentifiedImageError\u001b[0m                    Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[28], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m file_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mscreenshots/screenshot_\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(counter) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.png\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(file_name):\n\u001b[0;32m----> 6\u001b[0m   img \u001b[38;5;241m=\u001b[39m \u001b[43mPIL\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mImage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m   response \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mgenerate_content([prompt, img], stream\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      8\u001b[0m   response\u001b[38;5;241m.\u001b[39mresolve()\n",
+      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/PIL/Image.py:3309\u001b[0m, in \u001b[0;36mopen\u001b[0;34m(fp, mode, formats)\u001b[0m\n\u001b[1;32m   3307\u001b[0m     warnings\u001b[38;5;241m.\u001b[39mwarn(message)\n\u001b[1;32m   3308\u001b[0m msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcannot identify image file \u001b[39m\u001b[38;5;132;01m%r\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m (filename \u001b[38;5;28;01mif\u001b[39;00m filename \u001b[38;5;28;01melse\u001b[39;00m fp)\n\u001b[0;32m-> 3309\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m UnidentifiedImageError(msg)\n",
+      "\u001b[0;31mUnidentifiedImageError\u001b[0m: cannot identify image file 'screenshots/screenshot_11.png'"
+     ]
+    }
+   ],
    "source": [
     "prompt = \"Describe what you see on the screen.\"\n",
-    "\n",
     "counter = 0\n",
     "while True:\n",
-    "  file_name = \"screenshot_\" + str(counter) + \".png\"\n",
+    "  file_name = \"screenshots/screenshot_\" + str(counter) + \".png\"\n",
     "  if os.path.exists(file_name):\n",
     "    img = PIL.Image.open(file_name)\n",
     "    response = model.generate_content([prompt, img], stream=True)\n",
-    "    time.sleep(5)\n",
-    "    to_markdown(response.text)\n",
+    "    response.resolve()\n",
+    "    print(f'Image {counter} output:')\n",
+    "    print(response.text)\n",
     "    counter += 1\n",
     "\n"
    ]
